# AuroraEngine

./: .gitignore  CMakeLists.txt  GenerateProject.bat  premake5.lua
Aurora/src/: aurorapch.h
Aurora/src/Aurora/: Application.cpp  Application.h  AuroraFormatter.h  EntryPoint.h  Log.cpp  Log.h
Aurora/src/Aurora/Events/: Event.h
Aurora/src/Aurora/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Aurora/src/Aurora/Platform/Windows/: WindowsWindow.cpp
